opa/library/constraints/general/restrictselbsslpolicy/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictsElbSslPolicy
metadata:
  name: restrict-alb-ssl-policy
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
  parameters:
    allowedPolicies:
      - "ELBSecurityPolicy-TLS13-1-2-2021-06"
      - "ELBSecurityPolicy-TLS13-1-3-2021-06"
      - "ELBSecurityPolicy-TLS13-1-2-Res-2021-06"
